--- a/Listy.ipynb
+++ b/Listy.ipynb
@@ -204,6 +204,161 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 3), ('b', 2), ('a', 1), ('c', 1), ('q', 2), ('a', 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#10\n",
+    "def encode(l):\n",
+    "    return list(map(lambda x: (x[0], len(x)), pack(l)))\n",
+    "\n",
+    "print(encode(['a', 'a', 'a', 'b', 'b', 'a', 'c', 'q', 'q', 'a']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 3), ('b', 2), ('q', 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#11\n",
+    "def encodeModified(l):\n",
+    "    return list(filter(lambda x: x[1]>1, encode(l)))\n",
+    "\n",
+    "print(encodeModified(['a', 'a', 'a', 'b', 'b', 'a', 'c', 'q', 'q', 'a']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'a', 'a', 'b', 'b', 'a', 'c', 'q', 'q', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#12\n",
+    "def decode(l):\n",
+    "    return flatten([[item[0]]*item[1] for item in l])\n",
+    "\n",
+    "print(decode([('a', 3), ('b', 2), ('a', 1), ('c', 1), ('q', 2), ('a', 1)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 3), ('b', 2), ('a', 1), ('c', 1), ('q', 2), ('a', 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#13\n",
+    "def encodeDirect(l):\n",
+    "    beg = -1\n",
+    "    val = 0\n",
+    "    ret= list()\n",
+    "    for ind, val in enumerate(l):\n",
+    "        if ind==len(l)-1 or val!=l[ind+1]:\n",
+    "            ret.append((l[ind],ind-beg))\n",
+    "            beg = ind\n",
+    "    return ret\n",
+    "\n",
+    "print(encodeDirect(['a', 'a', 'a', 'b', 'b', 'a', 'c', 'q', 'q', 'a']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 2, 1, 1, 3, 3, 3, 3, 2, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#14\n",
+    "def duplicate(l):\n",
+    "    return flatten([[v]*2 for v in l])\n",
+    "\n",
+    "print(duplicate([1,2,1,3,3,2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 2, 2, 2, 2, 1, 1, 1, 1, 3, 3, 3, 3, 3, 3, 3, 3, 2, 2, 2, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#15\n",
+    "def duplicateN(l, n):\n",
+    "    return flatten([[v]*n for v in l])\n",
+    "\n",
+    "print(duplicateN([1,2,1,3,3,2],4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#16\n",
+    "def drop(l, n):\n",
+    "    del l[n-1::n]\n",
+    "    return l\n",
+    "\n",
+    "print(drop([1,2,1,3,3,2],3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
