--- a/Listy.ipynb
+++ b/Listy.ipynb
@@ -359,10 +359,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 4, 1], [3, 2, 5, 2, 12, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#17\n",
+    "def spl(l, n):\n",
+    "    return [l[:n], l[n:]]\n",
+    "\n",
+    "print(spl([2,4,1,3,2,5,2,12,1],3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#18\n",
+    "#17\n",
+    "def slice(l, k, j):\n",
+    "    return l[k:j]\n",
+    "\n",
+    "print(slice([2,4,1,3,2,5,2,12,1], 3, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 5, 2, 12, 1, 2, 4, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#19\n",
+    "def rotate(l, n):\n",
+    "    return l[n:] + l[:n]\n",
+    "\n",
+    "print(rotate([2,4,1,3,2,5,2,12,1], 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([2, 4, 1, 2, 5, 2, 12, 1], 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#20\n",
+    "def removeAt(l, n):\n",
+    "    t = l[n]\n",
+    "    del l[n]\n",
+    "    return (l, t)\n",
+    "\n",
+    "print(removeAt([2,4,1,3,2,5,2,12,1], 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 'a', 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#21\n",
+    "def insertAt(l, n, el):\n",
+    "    l.insert(n, el)\n",
+    "    return l\n",
+    "\n",
+    "print(insertAt([1,2,3,4,5],3,'a'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "#22\n",
+    "print(*range(2, 22))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#23\n",
+    "import random\n",
+    "def randomSel(l, n):\n",
+    "    q=list()\n",
+    "    for i in range(n):\n",
+    "        q.append(l.pop(random.randint(0,len(l)-1)))\n",
+    "    retu\n",
+    "        \n",
+    "print(randomSel([2,4,1,3,2,5,2,12,1], 3))"
+   ]
   }
  ],
  "metadata": {
